ChangeLog 'ClusteringSuite'

YYYY-MM-DD  John Doe  <johndoe@example.com>

	* myfile.ext (myfunction): my changes made
	additional changes

	* myfile.ext (unrelated_change): my changes made
	to myfile.ext but completely unrelated to the above

	* anotherfile.ext (somefunction): more changes


2010-10-25 Juan Gonzalez <juan.gonzalez@bsc.es>

	* Global modification and restructuration of source directories

	* Current functionality is closer to the original burst-clusterizer

	* Some regresions needs to be solved
	
	* .anjuta_sym_db.db Added to keep the Anjuta symbol database

2010-10-05 Juan Gonzalez <juan.gonzalez@bsc.es>

	* Initial submit to BSC subversion. Previous updates are
	located in 'burst-clusterizer' tool